@@ -1,6 +1,6 @@
 /* cmdline.h */
 
-/* File autogenerated by gengetopt version 2.10  */
+/* File autogenerated by gengetopt version 2.18  */
 
 #ifndef CMDLINE_H
 #define CMDLINE_H
@@ -24,22 +24,48 @@ extern "C" {
 
 struct gengetopt_args_info
 {
+  const char *help_help; /* Print help and exit help description.  */
+  const char *version_help; /* Print version and exit help description.  */
   char * project_arg;	/* The Project to build (.xcode, .xcodeproj).  */
+  char * project_orig;	/* The Project to build (.xcode, .xcodeproj) original value given at command line.  */
+  const char *project_help; /* The Project to build (.xcode, .xcodeproj) help description.  */
   int generate_makefile_only_flag;	/* This only generates project makefiles without running make (default=off).  */
+  const char *generate_makefile_only_help; /* This only generates project makefiles without running make help description.  */
   int debug_flag;	/* Turn on debug logging (default=off).  */
-
+  const char *debug_help; /* Turn on debug logging help description.  */
+  int symbolic_links_flag;	/* Generate the directory with symbolic links, this flag has no effect on operating systems that do not support symbolic links (default=off).  */
+  const char *symbolic_links_help; /* Generate the directory with symbolic links, this flag has no effect on operating systems that do not support symbolic links help description.  */
+  
   int help_given ;	/* Whether help was given.  */
   int version_given ;	/* Whether version was given.  */
   int project_given ;	/* Whether project was given.  */
   int generate_makefile_only_given ;	/* Whether generate-makefile-only was given.  */
   int debug_given ;	/* Whether debug was given.  */
+  int symbolic_links_given ;	/* Whether symbolic-links was given.  */
 
 } ;
 
-int cmdline_parser (int argc, char * const *argv, struct gengetopt_args_info *args_info);
+extern const char *gengetopt_args_info_purpose;
+extern const char *gengetopt_args_info_usage;
+extern const char *gengetopt_args_info_help[];
+
+int cmdline_parser (int argc, char * const *argv,
+  struct gengetopt_args_info *args_info);
+int cmdline_parser2 (int argc, char * const *argv,
+  struct gengetopt_args_info *args_info,
+  int override, int initialize, int check_required);
+int cmdline_parser_file_save(const char *filename,
+  struct gengetopt_args_info *args_info);
 
 void cmdline_parser_print_help(void);
 void cmdline_parser_print_version(void);
+
+void cmdline_parser_init (struct gengetopt_args_info *args_info);
+void cmdline_parser_free (struct gengetopt_args_info *args_info);
+
+int cmdline_parser_required (struct gengetopt_args_info *args_info,
+  const char *prog_name);
+
 
 #ifdef __cplusplus
 }
