@@ -1,3 +1,11 @@
+2008-11-02 21:45-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* cmdline.c
+	* cmdline.h
+	* main.m
+	* optionsparser.ggo: Add option to use symbolic links instead
+	of copying the files.
+
 2008-10-26 21:00-EDT Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* main.m: Copy only those files needed for each target instead
